# project1_DS

./: CMakeLists.txt  README.md  file1  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  polynomial.cpp  polynomial.h
main/: 实验报告.md
